# TankPhysicsSandbox

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.ja.md  README.md  vcpkg.json
Docs/: README.md
Docs/feature/: phase0-main-cleanup-2026-07-16.md  phase0-main-cleanup-2026-07-16_jp.md  phase1-rtpbrsurvey-main-update-2026-07-17.md  phase1-rtpbrsurvey-main-update-2026-07-17_jp.md  phase2-physics-test-scenes-2026-07-17.md  phase2-physics-test-scenes-2026-07-17_jp.md  phase3-tank-controller-boundary-2026-07-18.md  phase3-tank-controller-boundary-2026-07-18_jp.md  phase4-headless-tracked-vehicle-2026-07-19.md  phase4-headless-tracked-vehicle-2026-07-19_jp.md  rtpbrsurvey-host-integration-report-2026-07-16.md  rtpbrsurvey-host-integration.md
Docs/feedback/: 2026-07-16-rtpbrsurvey-host-bringup.md  2026-07-16-warp-fallback-hardware-adapter-null.md
Docs/opencode/: jolt-physics-chat.md
Docs/opencode/feature/: rtpbrsurvey-host-integration.md  rtpbrsurvey-submodule.md
Docs/opencode/jolt-physics-investigation/: report.md  task.md
Docs/opencode/roadmap/: two-week-goals-2026-07-15.md
Docs/opencode/rtpbrsurvey-requests/: README.md  requests.md  summary.ja.md
Docs/opencode/rtpbrsurvey-scene-renderer-integration/: anchored-summary.md  opencode.status.json  report.md  task.md
Docs/roadmap/: 2026-07-15-two-week-goals.md
Docs/rtpbrsurvey-requests/: README.md  requests.md  summary.ja.md
Source/TankSandbox/: Main.cpp
scripts/: build.bat  configure.bat
src/: TankSandboxApp.cpp  TankSandboxApp.h  main.cpp  stdafx.h
src/Physics/: BoxDropTest.cpp  BoxDropTest.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h  TankController.cpp  TankController.h  TankTypes.h  TrackedVehicleTest.cpp  TrackedVehicleTest.h
src/cli/: TankPhysicsCli.cpp
tests/: PhysicsWorldTests.cpp  TankControllerTests.cpp  TrackedVehicleForwardTests.cpp  TrackedVehiclePivotTests.cpp  TrackedVehicleSteeringTests.cpp  TrackedVehicleTests.cpp
